validate form using Regex

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <div class="form-group">
           <label for="email" class="visually-hidden">Email</label>
           <div class="input-container">
-            <input type="email" id="emain" name="email" required placeholder="Your email address" class="form__input">
+            <input type="email" id="email" name="email" required placeholder="Your email address" class="form__input">
             <p class="form__error-message">Please provide a valid email address!</p>
           </div>
           <button class="btn btn--submit" type="submit">notify me</button>
@@ -62,5 +62,6 @@
     </footer>
     <!-- ..../footer.... -->
   </div>
+  <script src="js/main.js"></script>
 </body>
 </html>
