improve accessibility for link

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <!-- ..../subheading.... -->
 
       <!-- ....form.... -->
-      <form action="" class="form" id="form" novalidate>
+      <form class="form" id="form" novalidate>
         <div class="form-group">
           <label for="email" class="visually-hidden">Email</label>
           <div class="input-container">
@@ -54,9 +54,9 @@
     <!-- ....footer.... -->
     <footer class="footer">
       <div class="footer__social-links">
-        <a href="#" class="footer__link"><i class="fab fa-facebook-f"></i></a>
-        <a href="#" class="footer__link"><i class="fab fa-twitter"></i></a>
-        <a href="#" class="footer__link"><i class="fab fa-instagram"></i></a>
+        <a href="#" class="footer__link" aria-label="a link to facebook website"><i class="fab fa-facebook-f"></i></a>
+        <a href="#" class="footer__link" aria-label="a link to twitter website"><i class="fab fa-twitter"></i></a>
+        <a href="#" class="footer__link" aria-label="a link to instagram website"><i class="fab fa-instagram"></i></a>
       </div>
       <p class="footer__text">&copy; Copyright Ping. All rights reserved</p>
     </footer>
